scss/illinois-framework/_paragraphs.contact-info.scss
.paragraph--type--contact {
  padding: rem(60px) 0 !important;

  &__title {

    h2 {
      color: var(--il-orange);
      font-size: rem(32px);
      font-weight: 600;
      line-height: rem(40px);
      padding: rem(20px) rem(15px) rem(10px);
      text-align: center;
    }
  }

  .field--name-field-contact {

    &__content {

      &__wrapper {
        @include media-breakpoint-down(md) {
          order: 0 !important;
          text-align: center !important;
        }
        &.right p {
          text-align: right;
        }
        &.right {
          text-align: right;
        }
        &.left {
          text-align: left;
        }
        &.lefttxt {
          order: 1;
        }
      }
      &__title {
        color: var(--il-blue);
        font-family: var(--il-source-sans);
        font-size: 36px;
        font-weight: normal;
        font-stretch: normal;
        font-style: normal;
        line-height: normal;
        letter-spacing: normal;
        padding-bottom: rem(30px);
      }
      &__subtitle {
        font-family: var(--il-source-sans);
        font-size: rem(20px);
        font-weight: bold;
        line-height: 1.5;
      }
      &__address {
        address {
          margin-bottom: 0;
          p {
            margin-bottom: 0;
          }
        }
      }
      &__phone {
        p {
          margin-bottom: 0;
        }
      }
      &__email {
        p {
          margin-bottom: 0;
        }
      }
      &__button {
        a {
          margin: rem(15px) 0;
        }
        &--0,
        &--1 {
          width: 100%;
        }
      }
      &__image {
        &__wrapper {
          width: 100%;

          @include media-breakpoint-down(md) {
            order: -1 !important;
          }

          //align opposite of what the text is aligned
          &.right,
          &.righttxt {
            text-align: left;
          }
          &.left,
          &.lefttxt {
            text-align: right;
          }

          img {
            max-width: 250px;
            width:250px;
          }
          @include media-breakpoint-down(md) {
            text-align: center !important
          }
        }
      }
      &__body {
        &__wrapper {

          padding-top: 10px;
          @include media-breakpoint-down(md) {
            order: 0 !important;
          }

          //align opposite of what the text is aligned
          &.right,
          &.righttxt {
            text-align: left;
          }
          &.left,
          &.lefttxt {
            text-align: right;
          }
          @include media-breakpoint-down(md) {
            text-align: center !important
          }
        }
      }
    }
  }
}
.il-content {
  .field--name-field-contact__content__image__wrapper {

    &.col-md-12 {
      flex: 0 0 50%;
      max-width: 50%;
    }
  }
  .field--name-field-contact__content__wrapper {
    order: 0;

    &.col-md-12 {
      flex: 0 0 50%;
      max-width: 50%;

      &.lefttxt {
        text-align: left !important;
        order: 1;
      }
      &.righttxt {
        text-align: right !important;
      }
    }
  }
  .field--name-field-contact__content__body__wrapper {

    &.col-md-12 {
      flex: 0 0 50%;
      max-width: 50%;

      &.lefttxt {
        text-align: left !important;
      }
      &.righttxt {
        text-align: right !important;
      }
    }
  }
}

